2007-12-03  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/common.py (argRepr): 
	* flumotion/test/test_common.py:
	Kill argRepr and remove tests

2007-12-03  Michael Smith <msmith@fluendo.com>

	* flumotion/common/registry.py:
	  Provide more useful debug output by using filenames where possible
	* flumotion/twisted/pb.py:
	  Log remote calls slightly more correctly.
	* flumotion/test/test_manager_manager.py:
	  Fix one of the skipped tests.

2007-12-03  Johan Dahlin  <johan@gnome.org>

	* data/glade/admin.glade:
	* data/glade/connection-dialog.glade:
	* data/glade/greeter-authenticate.glade:
	* data/glade/greeter-connect_to_existing.glade:
	* data/glade/greeter-load_connection.glade:
	* data/glade/wizard.glade:
	Remove trailing () so we can avoid eval.
	
	* flumotion/ui/glade.py (_flumotion_glade_custom_handler): 
	Rewrite, use namedAny instead of eval.
	Remove unused methods and mark methods as private.

2007-12-03  Johan Dahlin  <johan@gnome.org>

	* flumotion/ui/glade.py:
	* flumotion/ui/url.py:
	* flumotion/ui/wizard.py:
	Remove unused imports and make pyflakes happy.

2007-12-03  Johan Dahlin  <johan@gnome.org>

	* flumotion/ui/wizard.py (SectionWizard._jump_to_step): 
	When jumping to the same step don't do anything to
	avoid unnecessary ui flashes

	* flumotion/ui/sidebar.py (SidebarSection.__init__): 
	rename steps to buttons

	* po/POTFILES.in: Updae path to sidebar.py

	* data/glade/wizard.glade:
	* flumotion/ui/Makefile.am:
	* flumotion/wizard/Makefile.am:
	* flumotion/wizard/sidebar.py:
	Move sidebar.py from wizard/ to ui/

2007-12-03  Johan Dahlin  <johan@gnome.org>

	* flumotion/test/test_wizard.py: Remove a bitrotten test case

	* flumotion/ui/wizard.py:
	Refactor and simplify

	* flumotion/wizard/consumptionsteps.py (HTTPStep.__init__): 
	set _missing_element to none in the constructor, it happens
	when clicking on the step in the sidebar.

	* flumotion/ui/wizard.py (WizardStep): Remove unused vmethods.
